Updated: code to add copy to clipboard functionality and group po on the basis of order name(#28mf7zk)

--- a/src/locales/en.json
+++ b/src/locales/en.json
@@ -21,6 +21,7 @@
   "Change type": "Change type",
   "Click the backdrop to dismiss.": "Click the backdrop to dismiss.",
   "Color": "Color",
+  "Copied": "Copied",
   "Connections": "Connections",
   "Contact information": "Contact information",
   "created": "created",
