Implemented: Add support to update current timezone from setting page(#29bdmvr)

--- a/src/locales/en.json
+++ b/src/locales/en.json
@@ -7,6 +7,7 @@
   "All orders": "All orders",
   "Allocations": "Allocations",
   "any": "any",
+  "Are you sure you want to change the time zone to?": "Are you sure you want to change the time zone to?",
   "Arrival date": "Arrival date",
   "arrival date": "arrival date",
   "ATP": "ATP",
@@ -15,12 +16,15 @@
   "Back order": "Back order",
   "Back orders": "Back orders",
   "Broker attempt": "Broker attempt",
+  "Cancel": "Cancel",
   "Catalog": "Catalog",
   "Categories": "Categories",
+  "Change" : "Change",
   "Change fulfillment location": "Change fulfillment location",
   "Change type": "Change type",
   "Click the backdrop to dismiss.": "Click the backdrop to dismiss.",
   "Color": "Color",
+  "Confirm": "Confirm",
   "Connections": "Connections",
   "Contact information": "Contact information",
   "created": "created",
@@ -75,6 +79,7 @@
   "Logs": "Logs",
   "Logout": "Logout",
   "Netsuite": "Netsuite",
+  "No time zone found": "No time zone found",
   "OMS": "OMS",
   "On order": "On order",
   "Open orders": "Open orders",
@@ -136,8 +141,10 @@
   "Shops": "Shops",
   "Search purchase orders and products": "Search purchase orders and products",
   "Search shipments and products": "Search shipments and products",
+  "Search time zones": "Search time zones",
   "Search users": "Search users",
   "Settings": "Settings",
+  "Select time zone" : "Select time zone",
   "Shipping from": "Shipping from",
   "Ship from Facility name": "Ship from Facility name",
   "Ship from location": "Ship from location",
@@ -183,6 +190,7 @@
   "Warehouse": "Warehouse",
   "Without promise date": "Without promise date",
   "Time zone": "Time zone",
+  "Update time zone": "Update time zone",
   "username": "username",
   "Username": "Username",
   "User": "User",
