Reverted: package-lock.json & package.json in commerce-hub,Improve indentation(#29bdmvr)

--- a/src/locales/en.json
+++ b/src/locales/en.json
@@ -178,6 +178,7 @@
   "times": "times",
   "Threshold Management": "Threshold Management",
   "Timeline": "Timeline",
+  "Time zone updated successfully": "Time zone updated successfully",
   "Total": "Total",
   "Tracking code": "Tracking code",
   "Tracking number": "Tracking number",
