Improved: label to eCom Store on Settings.vue(#23tw4yf)

--- a/src/locales/en.json
+++ b/src/locales/en.json
@@ -155,7 +155,7 @@
   "Shipped from": "Shipped from",
   "Shipments": "Shipments",
   "Shipping method": "Shipping method",
-  "Shop": "Shop",
+  "eCom Store": "eCom Store",
   "Shops": "Shops",
   "Shopify": "Shopify",
   "Shopify ID": "Shopify ID",
